--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,20 @@
 .navBar {
     font-family: 'PT Serif', serif;
-    height: 30px;
     float: right;
 }
-
+.navBar div {
+    display: none;
+    font-size: 25px;
+    padding-right: 7px;
+    padding-left: 7px;
+    border: solid;
+    border-width: 2px;
+}
 .navBar ul {
     display: block;
     list-style: none;
     margin: 0;
-    padding-top: 4px;
+    padding-top: 6px;
 }
 
 .navBar ul li {
@@ -21,15 +27,25 @@
 }
 
 .logo {
-    padding-top: 3px;
     padding-left: 3px;
+    display: block;
     float: left;
+    font-family: 'Cinzel', serif;
+    font-size: 30px;
 }
 
-@media only screen and (max-width: 640px) {
+.mainBody {
+    width: 100%;
+    margin-top: 8px;
+    background-color: whitesmoke;
+    display: inline-block;
+}
+@media only screen and (max-width: 815px) {
 
-    .navBar {
+    .navBar ul{
         display: none;
     }
-
+    .navBar div {
+        display: block;
+    }
 }
