--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,3 +80,22 @@
         display: block;
     }
 }
+@media only screen
+and (max-device-width: 350px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    .logo {
+        font-size: 2.5em;
+    }
+    .navBar div{
+        font-size: 2.5em;
+    }
+}
+
+@media only screen and (max-device-width: 830px) {
+
+    .navBar ul{
+        display: none;
+    }
+    .navBar div {
+        display: block;
+    }
