--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@
 }
 .navBar ul {
     list-style: none;
-
+    transform: translateY(-1em);
 }
 
 .navBar ul li {
@@ -72,78 +72,26 @@
     margin: 0;
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 860px){
 
     .logo {
-        font-size: 2.5em;
+        font-size: 1.8em;
+    }
+    .navBar ul{
+        display: none;
     }
     .navBar div{
-        font-size: 2em;
+        display: block;
+        font-size: .9em;
     }
 }
 
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 600px) {
 
     .navBar ul{
         display: none;
     }
     .navBar div {
         display: block;
-    }
-}
-
-/* ------------------------------------------------- MOBILE -------------------------------------------------------- */
-
-
-@media only screen and (max-device-width: 830px) {
-    .logo {
-        display: block;
-        float: left;
-        font-family: 'Cinzel', serif;
-        font-size: 7em;
-        border: solid;
-        border-width: .04em;
-        padding-top: .05em;
-        padding-bottom: .05em;
-        padding-left: .1em;
-        padding-right: .1em;
-    }
-
-    .navBar div {
-        display: none;
-        font-size: 4em;
-        padding-right: .5em;
-        padding-left: .5em;
-        border: solid;
-        border-width: .04em;
-        padding-top: .01em;
-        padding-bottom: .01em;
-    }
-
-    .navBar ul {
-        display: none;
-    }
-
-    .navBar div {
-        display: block;
-    }
-
-    .welcomeMsg {
-        font-family: 'PT Serif', serif;
-        padding-top: .1em;
-        padding-bottom: .1em;
-        padding-left: .5em;
-        padding-right: .5em;
-        border: solid;
-        border-width: .1em;
-        background-color: whitesmoke;
-    }
-
-    .welcomeMsg h1{
-        font-size: 3em;
-    }
-
-    .welcomeMsg p {
-        font-size: 2em;
     }
 }
