--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,11 +3,11 @@
     display: inline-block;
 }
 
-.navBar {
+#navBar {
     font-family: 'PT Serif', serif;
     float: right;
 }
-.navBar div {
+#navBar div {
     display: none;
     font-size: 20px;
     border: solid;
@@ -15,21 +15,24 @@
 }
 
 #dropIcon {
+
+
     font-family: 'Cinzel', serif;
-}
-#dropDownList {
+
 
 }
 
-#dropDownListElement {
-
+.dropped {
+    display: block;
 }
-.navBar ul {
+
+
+#navBar ul {
     list-style: none;
     transform: translateY(-1em);
 }
 
-.navBar ul li {
+#navBar ul li {
     display: inline;
     padding-right: .5em;
     padding-left: .5em;
@@ -75,17 +78,23 @@
         font-size: 30px;
         height: 40px;
     }
-    .navBar ul{
+    .gone{
         display: none;
     }
-    .navBar div{
+    #navBar div{
         text-align: center;
         width: 2em;
         display: block;
         font-size: 25px;
         height: 40px;
     }
+    #navBar div:hover {
+        cursor: pointer;
+    }
 
+    #dropIcon {
+        margin-left: 70px;
+    }
 }
 
 /* Up to iPhone 6 shrink */
@@ -99,15 +108,17 @@
         height: 30px;
         font-size: 23px;
     }
-    .navBar ul{
-        display: none;
-    }
-    .navBar div {
+
+    #navBar div {
         height: 30px;
         width: 2em;
         text-align: center;
         font-size: 20px;
         display: block;
+    }
+
+    #dropIcon {
+        margin-left: 80px;
     }
 }
 
@@ -117,7 +128,7 @@
         font-size: 18px;
         height: 22px;
     }
-    .navBar div {
+    #navBar div {
         font-size: 15px;
         height: 22px;
     }
