--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,10 +219,34 @@ a {
     background-color: white;
 }
 
-.signUpInfoBox {
-    display: inline-block;
-    float: right;
-    width: 10em;
+.riddleDiv {
+    background-color: whitesmoke;
+    border: solid;
+    border-width: 2px;
+    margin-top: 1em;
+    padding: 1em;
+    white-space: nowrap;
+}
+
+.riddleName {
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+}
+
+.riddleAuthor {
+    font-family: 'PT Serif', serif;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.riddleDate {
+    font-family: 'PT Serif', serif;
+    font-size: 16px;
+}
+
+.riddleInfo {
+    font-family: 'PT Serif', serif;
+    font-size: 16px;
 }
 
 /* Browser shrink */
