--- a/stylesheet.css
+++ b/stylesheet.css
@@ -223,9 +223,19 @@ a {
     background-color: whitesmoke;
     border: solid;
     border-width: 2px;
-    margin-top: 1em;
+    margin-top: .3em;
     padding: 1em;
-    white-space: nowrap;
+}
+
+.riddleDiv:hover {
+    border-color: #d692a0;
+    color: #d692a0;
+    box-shadow: 3px 3px 5px #888888;
+    -webkit-transition: all 0.1s ease-out;
+    -moz-transition: all 0.1s ease-out;
+    -o-transition: all 0.1s ease-out;
+    transition: all 0.1s ease-out;
+    cursor: pointer;
 }
 
 .riddleName {
@@ -309,12 +319,12 @@ a {
     .logInBox {
         margin: 0;
     }
-    
+
     .logInWrapper {
         display: flex;
         padding-top: .1em;
     }
-    
+
     .logInInfoWrap {
         display: initial;
     }
