--- a/stylesheet.css
+++ b/stylesheet.css
@@ -225,6 +225,8 @@ a {
     border-width: 2px;
     margin-top: .3em;
     padding: 1em;
+    width: 100%;
+    text-align: left;
 }
 
 .riddleDiv:hover {
