--- a/stylesheet.css
+++ b/stylesheet.css
@@ -274,6 +274,64 @@ a {
     display: inline-block;
 }
 
+.sortAgeDiv {
+    position: relative;
+    width: 100px;
+    height: 50px;
+}
+
+.sortAgeClick {
+    display: none;
+}
+
+.sortAgeButtonBlank:hover{
+    cursor: pointer;
+}
+
+.sortAgeButtonSelected:hover{
+    cursor: pointer;
+}
+
+.sortAgeButtonBlank {
+    display: inline-block;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    padding: 10px;
+    border: solid;
+    border-width: 2px;
+    background-color: white;
+}
+
+.sortAgeButtonSelected {
+    display: inline-block;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    padding: 10px;
+    border-color: #d692a0;
+    color: #d692a0;
+    border: solid;
+    border-width: 2px;
+    background-color: white;
+}
+
+.categoryDropDown {
+    display: inline-block;
+    font-size: 14px;
+    border: solid;
+    border-width: 2px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    padding: 10px;
+    width: 100px;
+    background-color: white;
+}
+
+.categoryDropDown:hover{
+    cursor: pointer;
+}
+
+
+
 /* Browser shrink */
 @media only screen and (max-width: 860px){
 
