--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,16 +133,18 @@ a {
     width: 16em;
 }
 
-.logInButton {
+.logInButton, .signUpButton {
     font-family: 'PT Serif', serif;
-    font-size: 1em;
+    font-size: 14px;
     border: solid;
     border-width: 2px;
     border-radius: 0;
     background-color: white;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
 }
 
-.logInButton:hover {
+.logInButton:hover, .submitButton:hover {
     color: #d692a0;
     -webkit-transition: color 0.2s ease-out;
     -moz-transition: color 0.2s ease-out;
@@ -151,7 +153,7 @@ a {
     cursor: pointer;
 }
 
-.logInButton:focus {
+.logInButton:focus, .submitButton:focus {
     outline: none;
 }
 
@@ -162,7 +164,7 @@ a {
     border-radius: 0;
 }
 
-.generalInput:focus, .signUpFormInput:focus, .signUpFormInput_state:focus{
+.generalInput:focus, .signUpFormInput:focus, .signUpFormInput_state:focus, .searchInput:focus, .submissionsInput:focus{
     border-color: #d692a0;
     -webkit-transition: border-color 0.1s ease-out;
     -moz-transition: border-color 0.1s ease-out;
@@ -171,7 +173,7 @@ a {
     outline: none;
 }
 
-.generalInput:hover, .signUpFormInput:hover, .signUpFormInput_state:hover{
+.generalInput:hover, .signUpFormInput:hover, .signUpFormInput_state:hover, .searchInput:hover, .categoryDropDown:hover, .submissionsInput:hover{
     border-color: #d692a0;
     -webkit-transition: border-color 0.1s ease-out;
     -moz-transition: border-color 0.1s ease-out;
@@ -219,13 +221,38 @@ a {
     background-color: white;
 }
 
+.signUpButtonActive:hover {
+    color: #d692a0;
+    -webkit-transition: color 0.2s ease-out;
+    -moz-transition: color 0.2s ease-out;
+    -o-transition: color 0.2s ease-out;
+    transition: color 0.2s ease-out;
+    cursor: pointer;
+}
+
+.signUpButtonActive:focus {
+    outline: none;
+}
+
 .riddleDiv {
     background-color: whitesmoke;
     border: solid;
     border-width: 2px;
-    margin-top: 1em;
+    margin-top: .3em;
     padding: 1em;
-    white-space: nowrap;
+    width: 100%;
+    text-align: left;
+}
+
+.riddleDiv:hover {
+    border-color: #d692a0;
+    color: #d692a0;
+    box-shadow: 3px 3px 5px #888888;
+    -webkit-transition: all 0.1s ease-out;
+    -moz-transition: all 0.1s ease-out;
+    -o-transition: all 0.1s ease-out;
+    transition: all 0.1s ease-out;
+    cursor: pointer;
 }
 
 .riddleName {
@@ -247,6 +274,148 @@ a {
 .riddleInfo {
     font-family: 'PT Serif', serif;
     font-size: 16px;
+}
+
+.signUpLabel {
+    font-family: 'PT Serif', serif;
+    float: left;
+}
+
+.captchaWrap {
+    padding-top: 20px;
+}
+
+.g-recaptcha {
+    display: inline-block;
+}
+
+.sortAgeDiv {
+    position: relative;
+    width: 100px;
+    height: 50px;
+}
+
+.sortAgeClick {
+    display: none;
+}
+
+.sortAgeButtonBlank:hover{
+    cursor: pointer;
+}
+
+.sortAgeButtonSelected:hover{
+    cursor: pointer;
+}
+
+.sortAgeButtonBlank {
+    display: inline-block;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    padding: 5px;
+    border: solid;
+    border-width: 2px;
+    background-color: white;
+}
+
+.sortAgeButtonSelected {
+    display: inline-block;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    padding: 5px;
+    border-color: #d692a0;
+    color: #d692a0;
+    border: solid;
+    border-width: 2px;
+    background-color: white;
+}
+
+.categoryDropDown {
+    display: inline-block;
+    font-size: 14px;
+    border: solid;
+    border-width: 2px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    padding: 5px;
+    background-color: white;
+}
+
+.categoryDropDown:hover{
+    cursor: pointer;
+}
+
+.searchInput {
+    display: inline-block;
+    width: inherit;
+    border: solid;
+    border-width: 2px;
+    border-radius: 0;
+}
+
+.searchDropDown{
+    display: inline-block;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    border: solid;
+    border-width: 2px;
+    padding: 1px;
+    background-color: white;
+    font-family: 'PT Serif', serif;
+    outline: none;
+}
+
+.searchDropDown:hover {
+    border-color: #d692a0;
+    -webkit-transition: border-color 0.1s ease-out;
+    -moz-transition: border-color 0.1s ease-out;
+    -o-transition: border-color 0.1s ease-out;
+    transition: border-color 0.1s ease-out;
+    outline: none;
+    cursor: pointer;
+}
+
+.submissionsBox {
+    background-color: whitesmoke;
+    border: solid;
+    border-width: 2px;
+    text-align: center;
+    padding: 1em;
+    margin: auto;
+}
+
+.submissionsForm{
+    text-align: left;
+}
+
+.submissionsLabel{
+    font-family: 'PT Serif', serif;
+    font-size: 20px;
+    float: left;
+}
+
+.submissionsInput{
+    border: solid;
+    border-width: 2px;
+    border-radius: 0;
+    width: 100%;
+    resize: none;
+    font-size: 16px;
+}
+
+.invisibleWrapper{
+    padding: 10px;
+    text-align: center;
+}
+
+.submitButton{
+    font-family: 'PT Serif', serif;
+    font-size: 24px;
+    border: solid;
+    border-width: 2px;
+    border-radius: 0;
+    background-color: white;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
 }
 
 /* Browser shrink */
@@ -309,12 +478,16 @@ a {
     .logInBox {
         margin: 0;
     }
-    
+
+    .submissionsBox {
+        margin: 0;
+    }
+
     .logInWrapper {
         display: flex;
         padding-top: .1em;
     }
-    
+
     .logInInfoWrap {
         display: initial;
     }
@@ -326,6 +499,10 @@ a {
     }
 
     .signUpForm {
+        width: inherit;
+    }
+
+    .submissionsForm {
         width: inherit;
     }
 
